--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
 
     google.load("feeds", "1");
+    google.load("jquery", "1.4.2");
+
+    /* 
+    Use this idea to see if can retrieve more items from feed:
+
+    google.load("feeds", "1",{"callback" : pageLoaded});
+    */
 
     function initialize() {
-      var feed = new google.feeds.Feed("http://fastpshb.appspot.com/feed/1/fastpshb");
+      var feed = new google.feeds.Feed("http://feeds2.feedburner.com/tedtalks_video/");
       feed.load(function(result) {
         if (!result.error) {
           var container = document.getElementById("feed");
@@ -19,12 +28,16 @@
           }
         }
       });
+      
     }
     google.setOnLoadCallback(initialize);
 
     </script>
   </head>
   <body>
+    <header>
+  <h2>THE FEED</h2> 
+  </header>
     <div id="feed"></div>
   </body>
 </html>
