Footer is now sticky

--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <html>
-  <head>
-    <link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-
-    
-  </head>
-  <body>
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/style.css"> 
+</head>
+<body>
+  <div class="wrapper">
     <header>
-  <h2>THE FEED</h2> 
-  </header>
+      <h2>THE FEED</h2> 
+    </header>
     <div id="feed"></div>
-
-    <footer>
-      <h5>Sourced from <a href="http://feeds.feedburner.com/tedtalks_video" target="_blank">TEDTalks(video)</a>.</h5>
-    </footer>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+  </div><!--End of wrapper-->
+  <footer>
+    <h5>Sourced from <a href="http://feeds.feedburner.com/tedtalks_video" target="_blank">TEDTalks(video)</a>.</h5>
+  </footer>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
 </html>
