--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h5>Sourced from <a href="http://feeds.feedburner.com/tedtalks_video" target="_blank">TEDTalks(video)</a>.</h5>
   </footer>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
   <script src="js/main.js"></script>
 </body>
 </html>
